[PLA-1009] add parameter to swagger
